
This file shows the changes in recent releases of MODx. The most current release is usually the 
development release, and is only shown to give an idea of what's currently in the pipeline.

MODx Revolution 2.0.0-beta-5 ($LastChangedRevision$, $LastChangedDate$)
====================================
- [#MODX-1426] Added connect check to assist with mysql_get_server_info in setup
- Fixed some issues with OnDocFormSave, plus standardized how to render fields/html to update forms
- Fixed bug with default values, @ bindings and other things on checkbox/radio TVs
- Prevent tree from expanding too much on quick create, cleaned up js
- Assigned user id/username to [[+modx.user.id]] and [[+modx.user.username]] for easier access
- Cleaned up last PHP4 remnants to PHP5-only
- [#MODX-1483] Fixed bug with TV saving in resource create processors
- Recompiled MODx.Console to use Ext.Direct, now should be a bit more stable. To end a MODx.Console session, pass 'COMPLETED' to the registry.
- Resizing the left tree now properly resizes content in the right panel and is stateful
- Added resizability to leftbar tree
- Removed no-longer-necessary js file references in resource controllers
- Consolidated filetree css/js into main css/js files
- Fixed logic error that caused removing setup directory to fail
- Combined some common JS files, cleaned up login page css, other optimizations
- Consolidated filetree extension CSS, removed unnecessary filetree files
- Consolidated CSS files in templates/default/css to one single file to reduce load times from @imports
- Added rowactions to package grid
- Improved code in @DIRECTORY binding to be more efficient and take advantage of DirectoryIterator
- [#MODX-1478] Fixed @SELECT binding
- [#MODX-1474] Fixed bug with multiple list-boxes
- [#MODX-1476] Fixed bug with TV default values with non-inherit tvs, also bug with radios/checkboxes and set to default
- [#MODX-1479] Fixed bug with duplicate DOM ids in User Group tree